# CmakeExampleProject

./: !texturesandmodelsCredit.md  CMakeLists.txt  GenerateCompileCommands.cmake  README.md  print_directory_tree.py  unixBuild.sh
!thirdParty/include/CatVector/: .gitignore  CMakeLists.txt  tester.cpp  vector.cpp  vector.hpp
!thirdParty/include/CatVector/bench/: CMakeLists.txt
include/littlevulkanenginecontinuation/: first_app.hpp
resources/: LICENCE.md
resources/shaders/: compile.bat
src/: first_app.cpp  main.cpp
